--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,20 +7,35 @@ env:
   DOCKER_BUILDKIT: 1
 
 jobs:
+  # This workflow contains a single job called "build"
   build:
-    name: Build Docker Image
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout master
         uses: actions/checkout@v1
-      - name: Log in to docker hub
+      - name: Docker hub login
         run: docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Setup new Builder
+        run: |
+          docker buildx create --name mybuilder
+      - name: Select new Builder
+        run: |
+          docker buildx use mybuilder
+      - name: Bootstrap new Builder
+        run: |
+          docker buildx inspect --bootstrap
       - name: Build from dockerfile
         run: |
-          docker build \
+          docker buildx build \
+            --platform linux/amd64 \
             --cache-from $CACHE_IMAGE:latest \
             --tag $CACHE_IMAGE:latest \
             --build-arg BUILDKIT_INLINE_CACHE=1 \
+            --push \
             "."
-      - name: Push to docker hub
-        run: docker push $CACHE_IMAGE:latest
